--- a/environment.yml
+++ b/environment.yml
@@ -100,7 +100,7 @@ dependencies:
       - pandas==2.0.2
       - parso==0.8.3
       - pathspec==0.11.1
-      - peft==0.4.0.dev0
+      - peft==0.5.0
       - pexpect==4.8.0
       - pickleshare==0.7.5
       - pillow==9.5.0
@@ -139,7 +139,7 @@ dependencies:
       - torch==2.0.1
       - tqdm==4.65.0
       - traitlets==5.9.0
-      - transformers==4.30.2
+      - transformers
       - transformers-stream-generator==0.0.4
       - triton==2.0.0
       - typing-extensions==4.6.3
